# flame_robotics_drt---pdm

./: .gitignore  .gitmodules  README.md  requirements.txt
components/: readme.md
document/: .$component_map.drawio.bkp  component_map.drawio
document/design/: readme.md
dual_rb10_description/: CMakeLists.txt  package.xml
dual_rb20_description/: CMakeLists.txt  package.xml
example/: vis_gui.py
gui/: drt.cfg  monitor.desktop  monitor.py  requirements.txt
gui/monitor/: graphic_window.py  main_window.py  main_window.ui  pcdviewer.py  pdm_window.py  pdm_window.ui  rcm_window.py  rcm_window.ui  util_gen_pcd.ui  window.py  window.ui
python/: Makefile  controller.cfg  controller.py  drt.cfg  manager.cfg  manager.py  monitor.py  test.py  viewer3d.cfg  viewer3d.py  vis_urdf.py
python/base/: plugin_pdm_base.py  plugin_rcm_base.py
python/common/: pipeline.py  urdf_parser.py  zpipe.py
python/control/: control.py
python/controller/: control.py  controller.ui  geometry_model.py  window.py
python/examples/: example_pair_usage.py  example_zpipe_usage.py  publisher_example.py  subscriber_example.py
python/manager/: graphic_window.py  manager.py  manager.ui  manager_main.py  manager_main.ui  pcdviewer copy.py  pdm_window.py  rcm_window.py  rcm_window.ui
python/monitor/: graphic_window.py  main_window.py  main_window.ui  mcm_window.ui  pdm_window.py  (+3 more)
sample/: 3d_1.pcd
test/: test.py  test2.py  test3.py  test4.py
tools/: pdtool.py  requirements.txt  stl_to_pcd.py  toolenv.conf
urdf/: rb10_1300e.urdf  rb10_1300e_DDA.urdf  rb10_1300e_RT.urdf  ur5.urdf
(+515 files in other folders)
